# rsu_rebalancing

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
assets/: generate_assets.py
notebooks/: _helpers.py  exploration.py  rebalance_sim.py  rsu_backtest.py
rsu_rebalancing/: __init__.py  backtest.py  calendar.py  config.py  data.py  metrics.py  portfolio.py  simulate.py  strategy.py  vesting.py
src/rsu_app/: __init__.py  controls.py  figures.py  fixtures.py  tables.py
src/rsu_app/_data/: prices.parquet
src/rsu_rebalancing/: __init__.py  backtest.py  config.py  data.py  metrics.py  portfolio.py  strategy.py  vesting.py
tests/: test_app.py  test_backtest.py  test_calendar.py  test_config.py  test_data.py  test_fixtures.py  test_metrics.py  test_notebook.py  test_portfolio.py  test_simulate.py  test_strategy.py  test_vesting.py
