[project]
name = "rsu-rebalancing"
version = "0.1.0"
description = "Backtest a one-way threshold rebalancing strategy for concentrated employer-stock (RSU) compensation."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Tabish Mustufa", email = "tabishm@gmail.com" }]
keywords = ["finance", "rsu", "rebalancing", "backtest", "pandas", "marimo"]
dependencies = [
    "numpy",
    "pandas",
    "yfinance",
    "marimo",
    "python-dotenv",
    "matplotlib",
    "seaborn",
    "pyarrow",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "mypy",
    "pandas-stubs",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["rsu_rebalancing"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
# pycodestyle, pyflakes, isort, pep8-naming, pyupgrade, flake8-bugbear, docstrings
select = ["E", "F", "I", "N", "UP", "B", "D"]
ignore = [
    "D203", # one-blank-line-before-class (conflicts with D211)
    "D213", # multi-line-summary-second-line (conflicts with D212)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D"]          # don't require docstrings in tests
# marimo cells: classes are passed between cells as args (N803), bare exprs render
# output (B018), imports live in the first cell (E402).
"notebooks/*" = ["D", "B018", "E402", "N803"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
# Lenient by design: type annotations aid readability/editor help, but type
# checkers catch little inside pandas pipelines. This is a learning aid, not a gate.
python_version = "3.11"
files = ["rsu_rebalancing"]
ignore_missing_imports = true
warn_unused_ignores = false
check_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
