[project]
name = "rsu-rebalancing"
version = "0.1.0"
description = "Backtest a one-way threshold rebalancing strategy for concentrated employer-stock (RSU) compensation."
readme = "README.md"
requires-python = ">=3.14"
license = "MIT"
authors = [{ name = "Tabish Mustufa", email = "tabishm@gmail.com" }]
keywords = ["finance", "rsu", "rebalancing", "backtest", "pandas", "marimo"]
dependencies = [
    "numpy",
    "pandas",
    "yfinance",
    "marimo",
    "matplotlib",
    "seaborn",
    "quantstats",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "mypy",
    "pandas-stubs",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["rsu_rebalancing"]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
# pycodestyle, pyflakes, isort, pep8-naming, pyupgrade, flake8-bugbear, docstrings
select = ["E", "F", "I", "N", "UP", "B", "D"]
ignore = [
    "D203", # one-blank-line-before-class (conflicts with D211)
    "D213", # multi-line-summary-second-line (conflicts with D212)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D"]          # don't require docstrings in tests
# marimo cells: classes are passed between cells as args (N803), bare exprs render
# output (B018), imports live in the first cell (E402).
"notebooks/*" = ["D", "B018", "E402", "N803"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
# Notebooks excluded: untypable marimo/matplotlib UI glue
python_version = "3.14"
files = ["rsu_rebalancing", "assets", "tests"]
warn_unused_ignores = true
check_untyped_defs = true

[[tool.mypy.overrides]]
# yfinance ships no stubs or py.typed marker
module = "yfinance.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
