[project]
name = "rsu-rebalancing"
version = "0.1.0"
description = "Backtest a one-way threshold rebalancing strategy for concentrated employer-stock (RSU) compensation."
readme = "README.md"
requires-python = ">=3.14"
license = "MIT"
authors = [{ name = "Tabish Mustufa", email = "tabishm@gmail.com" }]
keywords = ["finance", "rsu", "rebalancing", "backtest", "pandas", "marimo"]
dependencies = [
    "numpy",
    "pandas",
    "yfinance",
    "marimo",
    "matplotlib",
    "seaborn",
    "quantstats",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "pyright",
    "pandas-stubs",
    "pyarrow",  # read/write the checked-in price fixture (tests + offline asset gen)
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rsu_rebalancing", "src/rsu_app"]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
# pycodestyle, pyflakes, isort, pep8-naming, pyupgrade, flake8-bugbear, docstrings
select = ["E", "F", "I", "N", "UP", "B", "D"]
ignore = [
    "D203", # one-blank-line-before-class (conflicts with D211)
    "D213", # multi-line-summary-second-line (conflicts with D212)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D"]          # don't require docstrings in tests
# marimo cells: classes are passed between cells as args (N803), bare exprs render
# output (B018), imports live in the first cell (E402).
"notebooks/*" = ["D", "B018", "E402", "N803"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pyright]
pythonVersion = "3.14"
typeCheckingMode = "basic"
reportUnnecessaryTypeIgnoreComment = true

# Silence the marimo "bare expression renders the cell" idiom across notebooks
[[tool.pyright.executionEnvironments]]
root = "notebooks"
reportUnusedExpression = "none"

[tool.pytest.ini_options]
testpaths = ["tests"]
